# VPNClient

./: .eslintignore  .eslintrc.js  .eslintrc.web.js  .gitignore  CI_CD_SUMMARY.md  Dockerfile  LICENSE  README.md  app.json  docker-compose.yml  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
.github/: CICD_SETUP.md  PLATFORM_CONFIGS.md
.github/workflows/: ci.yml  deploy.yml  release.yml  test-matrix.yml
android/: build.gradle  gradlew  settings.gradle
android/app/: build.gradle
hysteria2_vpn_client/android/: gradlew
hysteria2_vpn_client/ios/: Podfile  test_ios_build.sh
hysteria2_vpn_client/macos/: test_macos_build.sh
ios/: Podfile  build_ios.sh  test_ios_build.sh
ios/Hysteria2VpnClient/: Info.plist
ios/Hysteria2VpnClient.xcworkspace/: contents.xcworkspacedata
ios/hysteria2_vpn_client/: AppDelegate.m
ios/hysteria2_vpn_client.xcodeproj/: project.pbxproj
k8s/: deployment.yaml
linux/: CMakeCache.txt  CMakeLists.txt  Makefile  build_linux.sh  cmake_install.cmake  main.cpp  test_linux_build.sh
macos/: build_macos.sh  test_macos_build.sh
macos/Hysteria2VpnClient/: Info.plist
nginx/: nginx.conf
public/: index.html
scripts/: package-check.sh  security-check.sh
src/: App.tsx  App.web.css  App.web.tsx  index.js
src/__tests__/: App.test.tsx  README.md  basic.test.ts
terraform/: backend.tf  data.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
web/: build_web.sh
windows/: Hysteria2VpnClient.sln  build_windows.ps1  build_windows.sh  test_windows_build.sh
(+21 files in other folders)
